Fix z-index of gallery close button

--- a/mediarepo-ui/src/app/components/file-gallery/file-gallery.component.scss
+++ b/mediarepo-ui/src/app/components/file-gallery/file-gallery.component.scss
@@ -50,6 +50,7 @@ img {
   right: 0;
   width: 3em;
   height: 3em;
+  z-index: 999;
 }
 
 .url-loading-backdrop {
